css/mentor-new.css
body {
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
}

.lpa-template {
  display: none;
}

.lpa-message {
  background-color: yellow;
  padding: 5px 80px;
  transition: transform 0.3s cubic-bezier(0, 0, 0.3, 1);
  position: absolute;
  width: 100%;

}

.lpa-message.hide {
  transform: translateY(-50px);
}

.lpa-subpage {
  transition: opacity 0.6s cubic-bezier(0, 0, 0.3, 1);
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -1;
  box-sizing: border-box;
  /* Add break points */
  padding: 20px 80px;
  opacity: 0;
}

.lpa-subpage.lpa-active {
  opacity: 1;
  z-index: 0;
}

.lpa-subpage h1 {
  font-size: 1.5em;
}

.lpa-page-content {
  position: relative;
  width: 100%;
}

.lpa-sign-in-section {
  height: 100px;
  padding: 30px;
  text-align: center;
  background: rgb(0, 188, 212);
}

.lpa-header {
  /*background: url(../img/city-hd.jpeg) center/cover;*/
  background: url(../img/lpa-header.jpg) center/cover;
}

@media screen and (max-width: 1024px) {
  .mdl-layout__header {
      display: block;
      max-height: 56px;
  }
}



.mdl-layout__header-row {
  z-index: 1;
}

.lpa-header-info {
  font-size: 1em;
  display: block;

  padding: 0.2em;
}

.lpa-header-title {
  font-size: 1.5em;
  padding: 0.2em;
  display: block;
}

.lpa-main-nav {
  opacity: 0;
  background: #607D8B;
  color: #fff;
  padding-left: 48px;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.lpa-main-nav a {
  color: #fff;
  font-weight: normal;
}

.lpa-signed-in .lpa-sign-in-section {
  opacity: 0;
}

.lpa-signed-in .lpa-page-content {
  position: relative;
}

.lpa-signed-in .lpa-main-nav {
  opacity: 1;
}

.lpa-signed-in .lpa-sign-in {
  display: none !important;
}

.lpa-sign-out-nav {
  display: none;
}

.lpa-signed-in .lpa-sign-out-nav {
  display: flex;
}

.lpa-fileinput-fab {
  width: 56px;
  height: 56px;
  z-index: 999;
  opacity: 0;
  position: absolute;
}


@media screen and (max-width: 1024px) {
  .mdl-layout__drawer-button {
      color: #fff;
  }
}


.lpa-survey-btn {
  margin: -4px auto 4px auto
}


#lpa-survey-btn {
  position: relative;
  top: -26px;
  z-index: 99;
  margin-right: 136px;
}



.lpa-dialog {
  width: 500px;
}

.mdl-list {
  max-width: 500px;
}

form .mdl-textfield {
  display: block;
}

.lpa-survey-img {
  max-width: 100px;
}

#lpa-camera-preview a {
  display: inline-block;
  width: 100px;
  height: 100px;
  overflow: hidden;
  text-align: center;
  background-size: cover;
}

footer a {
  text-decoration: none;
  color: #fff;
}

.mdl-layout__tab-bar {
  height: auto;
  width: 100%;
}

.is-small-screen .mdl-layout__header--waterfall {
    max-height: 192px;
}

.is-small-screen .mdl-layout__header--waterfall.is-compact {
    max-height: 64px;
}

header.is-compact::before {
  height: 64px;
  *background: rgb(63, 87, 99);
}

header::before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  width: 100%;
  height: 192px;  /* 3x64 3 header rows */
  background: linear-gradient(rgba(63, 87, 99, 0.8), transparent);
}

.is-small-screen header::before {
  height: 168px;  /* 3x64 3 header rows */
}

.mdl-layout__header-row .mdl-navigation__link {
  padding: 0 12px;
}

.mdl-tabs.is-upgraded .mdl-tabs__tab.is-active {
  color: #fff;
}

.mdl-tabs.is-upgraded .mdl-tabs__tab.is-active::after {
  height: 4px;
  background: rgb(255,171,64);
}

@media screen and (max-width: 520px) {
  .lpa-main-nav {
    display: none;
  }
}

@media screen and (max-width: 700px) {
  #lpa-survey-btn {
    position: absolute;
    bottom: 110px;
    margin-right: 0;
    right: 48px;
    top: auto;
  }

  .lpa-subpage {
    padding: 24px 48px;
  }

  .lpa-dialog {
    width: 100%;
    margin: 0;
    box-sizing: border-box;
    top: 0;
    left: 0;
    right: 0;
    left: 0;
  }
}

.lpa-survey-error {
  color: #d50000;
  font-size: 12px;
}

